--- a/src/pages/SignIn/SignIn.module.css
+++ b/src/pages/SignIn/SignIn.module.css
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("https://t3.ftcdn.net/jpg/02/72/49/32/360_F_272493272_5agmENeYNKvvTHjYrrXOjOVN2ONPtBMp.jpg");
+    background: url("https://www.creativefabrica.com/wp-content/uploads/2019/03/Monogram-TK-Logo-Design-by-Greenlines-Studios.jpg");
     background-size: contain;
     z-index: 2;
 }
